new fucntions for storage
